{{$NEXT}}

0.003     2019-12-23 11:51:19 EST
  - Fix tests on Windows again

0.002     2019-12-22 19:04:08 EST
  - Fix tests on Windows

0.001     2019-12-22 18:33:08 EST
  - First release