@@ -81,6 +81,15 @@ Path::This - Path to this source file or directory
   use Path::This '$THISDIR';
   use lib "$THISDIR/../lib";
 
+  # using core modules - use constant or BEGIN to resolve __FILE__ at compile time
+  use Cwd ();
+  use File::Basename ();
+  use constant THISFILE => Cwd::abs_path(__FILE__);
+  use constant THISDIR => File::Basename::dirname(Cwd::abs_path __FILE__);
+  my ($THISFILE, $THISDIR);
+  BEGIN { $THISFILE = Cwd::abs_path(__FILE__) }
+  BEGIN { $THISDIR = File::Basename::dirname(Cwd::abs_path __FILE__) }
+
 =head1 DESCRIPTION
 
 Exports package variables by request that represent the current source file or
@@ -90,6 +99,9 @@ requested. Paths will be absolute with symlinks resolved.
 Note that the package variable or constant sub will be exported to the current
 package globally. If the same package will be used in multiple files, use the
 dynamic sub export so the file path will be calculated when the sub is called.
+
+For cases where this module cannot be loaded beforehand, the last section of
+the L</"SYNOPSIS"> shows how to perform the same task with core modules.
 
 =head1 EXPORTS
 
