@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add equivalent code using core modules to synopsis
 
 0.003     2019-12-23 11:51:19 EST
   - Fix tests on Windows again
